--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aamirk1.github.io/aamirk",
+  "homepage": "https://aamirk1.github.io/techno",
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
