--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@mantine/core": "^7.12.1",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
     "@tabler/icons-react": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-icon-cloud": "^4.1.4",
     "react-pdf": "^9.1.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.5.2",
     "typescript": "^4.9.5",
