--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/core": "^7.12.1",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
@@ -18,11 +21,14 @@
     "aos": "^2.3.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icon-cloud": "^4.1.4",
+    "react-intersection-observer": "^9.13.1",
     "react-pdf": "^9.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "tailwind-merge": "^2.5.2",
     "typescript": "^4.9.5",
     "typewriter-effect": "^2.21.0",
